fix redirect and issues on fe
